--- a/pkgs/tools/package-management/nixops2/pyproject.toml
+++ b/pkgs/tools/package-management/nixops2/pyproject.toml
@@ -12,9 +12,11 @@ nixops-gcp = {git = "https://github.com/nix-community/nixops-gce.git"}
 nixopsvbox = {git = "https://github.com/nix-community/nixops-vbox.git"}
 nixops-encrypted-links = {git = "https://github.com/nix-community/nixops-encrypted-links.git"}
 nixops-virtd = {git = "https://github.com/nix-community/nixops-libvirtd.git"}
+nixops-digitalocean = {git = "https://github.com/nix-community/nixops-digitalocean.git"}
 
 [tool.poetry.dev-dependencies]
 sphinx = "^3.1.2"
+typeguard = "2.9.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
